# sparse_numba

./: .gitignore  LICENSE  MANIFEST.in  README.md  check_extensions.py  dll_diagnosis.py  pyproject.toml  run_tests.py  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  manual-workflow.yml
doc/: Installation Guide for sparse_numba.md
docker/: Dockerfile
docs/: Installation_Guide_for_sparse_numba.md
sparse_numba/: __init__.py  benchmark_parallel_slu.py  benchmark_parallel_umf.py  benchmark_prefactorize_slu.py  benchmark_single_slu.py  benchmark_single_umf.py  dll_diagnosis.py  test_import.py
sparse_numba/conversion/: __init__.py  matrix_conversion_numba.py
sparse_numba/sparse_superlu/: __init__.py  cy_superlu_wrapper.c  cy_superlu_wrapper.pyx  cy_superlu_wrapper_api.h  superlu_numba_interface.py  superlu_wrapper.c  superlu_wrapper.h
sparse_numba/sparse_superlu/test/: __init__.py  test_example_slu.py  test_prefactorize_slu.py  test_superlu_installation.py
sparse_numba/sparse_umfpack/: __init__.py  cy_umfpack_wrapper.c  cy_umfpack_wrapper.pyx  cy_umfpack_wrapper_api.h  umfpack_numba_interface.py  umfpack_wrapper.c  umfpack_wrapper.h
sparse_numba/sparse_umfpack/test/: __init__.py  test_coo_csc_conversion.py  test_example_umfpack.py  test_prefactorize_umf.py
