[metadata]
name = sparse_numba
version = 0.1.5
author = Tianqi Hong
author_email = tianqi.hong@uga.edu
description = Customized sparse solver with Numba support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/th1275/sparse_numba
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.13.3
    numba>=0.60.0


[options.packages.find]
exclude =
    tests
    examples